--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -22,6 +22,8 @@
       </button>
       <span>etf</span>
     </mat-toolbar>
-    <!-- Add Content Here -->
+    
+    <router-outlet></router-outlet>
+    
   </mat-sidenav-content>
 </mat-sidenav-container>
