--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -5,9 +5,9 @@
                [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#" routerLinkActive="active" routerLink="/">Home</a>
+      <a mat-list-item href="#" routerLinkActive="active-link" routerLink="/home">Home</a>
       <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item href="#" routerLinkActive="active-link" routerLink="/settings">Settings</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
