--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -3,19 +3,19 @@
     <mat-card-title>My ETFs</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <table mat-table [dataSource]="myEtfs" class="mat-elevation-z3">
+    <table mat-table #etfTable [dataSource]="myEtfs" class="mat-elevation-z3">
       <ng-container matColumnDef="isin">
         <th mat-header-cell *matHeaderCellDef> ISIN </th>
         <td mat-cell *matCellDef="let element"> {{element.isin}} </td>
       </ng-container>
-    
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   </mat-card-content>
 </mat-card>
 
-<form [formGroup]="addEtfForm" novalidate (ngSubmit)="submitNewEtf()">
+<form [formGroup]="addEtfForm" novalidate (ngSubmit)="submitNewEtf()" #formDirective="ngForm">
   <mat-card class="settings-card">
     <mat-card-header>
       <mat-card-title>Add ETF</mat-card-title>
